--- a/PizzaApp/PizzaApp/Base.lproj/Main.storyboard
+++ b/PizzaApp/PizzaApp/Base.lproj/Main.storyboard
@@ -56,34 +56,114 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cLX-Yc-rWy">
-                                <rect key="frame" x="175" y="163" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cLX-Yc-rWy">
+                                <rect key="frame" x="176" y="74" width="41.333333333333343" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="FSb-dg-LiF"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IRX-kh-YGv">
-                                <rect key="frame" x="76" y="236" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IRX-kh-YGv">
+                                <rect key="frame" x="126.66666666666669" y="124" width="140" height="140"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="140" id="M3p-34-K9M"/>
+                                    <constraint firstAttribute="height" constant="140" id="tAA-hj-aLL"/>
+                                </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="caH-5f-7w8">
-                                <rect key="frame" x="159" y="89" width="75" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="caH-5f-7w8">
+                                <rect key="frame" x="15" y="74" width="75" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                 <connections>
                                     <action selector="backButtonTapped:" destination="Yq8-pG-Ro5" eventType="touchUpInside" id="nzU-0N-DqP"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="oss-Cg-vZI">
+                                <rect key="frame" x="10" y="330" width="373" height="427"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iUr-ML-4ef">
+                                <rect key="frame" x="30" y="294" width="333" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lPL-Vp-5qz">
+                                <rect key="frame" x="0.0" y="757" width="393" height="61"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1rR-hc-nPc">
+                                        <rect key="frame" x="95.666666666666671" y="20" width="11" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1HM-TX-cnL">
+                                        <rect key="frame" x="50" y="20" width="7.6666666666666643" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hw3-l0-0m6">
+                                        <rect key="frame" x="268" y="13" width="75" height="35"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="huE-cp-cVL">
+                                        <rect key="frame" x="72.666666666666671" y="20" width="8" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="huE-cp-cVL" firstAttribute="top" secondItem="lPL-Vp-5qz" secondAttribute="top" constant="20" id="3rn-R7-eFV"/>
+                                    <constraint firstAttribute="bottom" secondItem="1rR-hc-nPc" secondAttribute="bottom" constant="20" id="76x-0r-WEe"/>
+                                    <constraint firstAttribute="bottom" secondItem="huE-cp-cVL" secondAttribute="bottom" constant="20" id="HBN-Zo-PDb"/>
+                                    <constraint firstItem="1rR-hc-nPc" firstAttribute="leading" secondItem="huE-cp-cVL" secondAttribute="trailing" constant="15" id="RBo-0Z-0Po"/>
+                                    <constraint firstAttribute="trailing" secondItem="Hw3-l0-0m6" secondAttribute="trailing" constant="50" id="T3i-Q3-Gqb"/>
+                                    <constraint firstItem="Hw3-l0-0m6" firstAttribute="centerY" secondItem="lPL-Vp-5qz" secondAttribute="centerY" id="TSg-T2-WTs"/>
+                                    <constraint firstItem="huE-cp-cVL" firstAttribute="leading" secondItem="1HM-TX-cnL" secondAttribute="trailing" constant="15" id="bHc-71-Ary"/>
+                                    <constraint firstItem="1HM-TX-cnL" firstAttribute="leading" secondItem="lPL-Vp-5qz" secondAttribute="leading" constant="50" id="bs2-ve-X9V"/>
+                                    <constraint firstItem="1rR-hc-nPc" firstAttribute="top" secondItem="lPL-Vp-5qz" secondAttribute="top" constant="20" id="bvK-n5-Fz8"/>
+                                    <constraint firstAttribute="bottom" secondItem="1HM-TX-cnL" secondAttribute="bottom" constant="20" id="gR9-a4-oMb"/>
+                                    <constraint firstItem="1HM-TX-cnL" firstAttribute="top" secondItem="lPL-Vp-5qz" secondAttribute="top" constant="20" id="ttG-au-EPb"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Mb3-Bn-rwQ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="caH-5f-7w8" firstAttribute="leading" secondItem="Mb3-Bn-rwQ" secondAttribute="leading" constant="15" id="2vU-b4-rdE"/>
+                            <constraint firstItem="caH-5f-7w8" firstAttribute="top" secondItem="Mb3-Bn-rwQ" secondAttribute="top" constant="15" id="4TP-cX-DEt"/>
+                            <constraint firstItem="iUr-ML-4ef" firstAttribute="top" secondItem="IRX-kh-YGv" secondAttribute="bottom" constant="30" id="7qu-MS-Q2p"/>
+                            <constraint firstItem="oss-Cg-vZI" firstAttribute="top" secondItem="iUr-ML-4ef" secondAttribute="bottom" constant="15" id="AXz-qw-KDU"/>
+                            <constraint firstItem="lPL-Vp-5qz" firstAttribute="top" secondItem="oss-Cg-vZI" secondAttribute="bottom" id="CyJ-3J-XaF"/>
+                            <constraint firstItem="oss-Cg-vZI" firstAttribute="leading" secondItem="Mb3-Bn-rwQ" secondAttribute="leading" constant="10" id="CyL-VM-D2f"/>
+                            <constraint firstItem="Mb3-Bn-rwQ" firstAttribute="bottom" secondItem="lPL-Vp-5qz" secondAttribute="bottom" id="E6l-gF-BSR"/>
+                            <constraint firstItem="iUr-ML-4ef" firstAttribute="leading" secondItem="Mb3-Bn-rwQ" secondAttribute="leading" constant="30" id="MgB-Fe-N1O"/>
+                            <constraint firstItem="IRX-kh-YGv" firstAttribute="centerX" secondItem="4lZ-Px-5bR" secondAttribute="centerX" id="SKp-qe-Mby"/>
+                            <constraint firstItem="Mb3-Bn-rwQ" firstAttribute="trailing" secondItem="lPL-Vp-5qz" secondAttribute="trailing" id="eM8-Zs-y5b"/>
+                            <constraint firstItem="cLX-Yc-rWy" firstAttribute="centerX" secondItem="4lZ-Px-5bR" secondAttribute="centerX" id="iel-La-U7x"/>
+                            <constraint firstItem="lPL-Vp-5qz" firstAttribute="leading" secondItem="Mb3-Bn-rwQ" secondAttribute="leading" id="imG-qd-rj8"/>
+                            <constraint firstItem="Mb3-Bn-rwQ" firstAttribute="trailing" secondItem="iUr-ML-4ef" secondAttribute="trailing" constant="30" id="lij-3f-3Y5"/>
+                            <constraint firstItem="IRX-kh-YGv" firstAttribute="top" secondItem="cLX-Yc-rWy" secondAttribute="bottom" constant="15" id="qQG-XM-MS4"/>
+                            <constraint firstItem="cLX-Yc-rWy" firstAttribute="top" secondItem="Mb3-Bn-rwQ" secondAttribute="top" constant="15" id="uTX-fs-CaF"/>
+                            <constraint firstItem="Mb3-Bn-rwQ" firstAttribute="trailing" secondItem="oss-Cg-vZI" secondAttribute="trailing" constant="10" id="urU-8U-MdR"/>
+                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="addToCartButton" destination="Hw3-l0-0m6" id="LIr-DA-Kh9"/>
                         <outlet property="backButton" destination="caH-5f-7w8" id="752-A9-GAX"/>
+                        <outlet property="ingredients" destination="iUr-ML-4ef" id="isj-Se-XiR"/>
+                        <outlet property="ingredientsTableView" destination="oss-Cg-vZI" id="bwK-Ve-Bp9"/>
+                        <outlet property="minusLabel" destination="1HM-TX-cnL" id="Mcx-Yq-DN6"/>
+                        <outlet property="numberLabel" destination="huE-cp-cVL" id="Fvr-dQ-ftW"/>
                         <outlet property="pizzaImageView" destination="IRX-kh-YGv" id="XrL-UY-jvL"/>
                         <outlet property="pizzaNameLabel" destination="cLX-Yc-rWy" id="5tZ-Er-v66"/>
+                        <outlet property="plusLabel" destination="1rR-hc-nPc" id="ONt-G6-ob5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uU6-B9-VEe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
