--- a/PizzaApp/PizzaApp/Base.lproj/Main.storyboard
+++ b/PizzaApp/PizzaApp/Base.lproj/Main.storyboard
@@ -73,9 +73,9 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="caH-5f-7w8">
-                                <rect key="frame" x="15" y="74" width="75" height="35"/>
+                                <rect key="frame" x="15" y="74" width="76.333333333333329" height="35"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="&lt; Back"/>
                                 <connections>
                                     <action selector="backButtonTapped:" destination="Yq8-pG-Ro5" eventType="touchUpInside" id="nzU-0N-DqP"/>
                                 </connections>
@@ -106,9 +106,16 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hw3-l0-0m6">
-                                        <rect key="frame" x="268" y="13" width="75" height="35"/>
+                                        <rect key="frame" x="193" y="13" width="150" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="EDz-QC-wGb"/>
+                                            <constraint firstAttribute="height" constant="35" id="bpB-il-tqx"/>
+                                        </constraints>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled"/>
+                                        <connections>
+                                            <action selector="addButtonTapped:" destination="Yq8-pG-Ro5" eventType="touchUpInside" id="12s-10-gOu"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="huE-cp-cVL">
                                         <rect key="frame" x="72.666666666666671" y="20" width="8" height="21"/>
