--- a/PizzaApp/PizzaApp/Base.lproj/Main.storyboard
+++ b/PizzaApp/PizzaApp/Base.lproj/Main.storyboard
@@ -114,7 +114,7 @@
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled"/>
                                         <connections>
-                                            <action selector="addButtonTapped:" destination="Yq8-pG-Ro5" eventType="touchUpInside" id="12s-10-gOu"/>
+                                            <action selector="buyButtonTapped:" destination="Yq8-pG-Ro5" eventType="touchUpInside" id="G4R-4T-wq9"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="huE-cp-cVL">
@@ -162,7 +162,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="addToCartButton" destination="Hw3-l0-0m6" id="LIr-DA-Kh9"/>
+                        <outlet property="addToCartButton" destination="Hw3-l0-0m6" id="Ma6-af-f6e"/>
                         <outlet property="backButton" destination="caH-5f-7w8" id="752-A9-GAX"/>
                         <outlet property="ingredients" destination="iUr-ML-4ef" id="isj-Se-XiR"/>
                         <outlet property="ingredientsTableView" destination="oss-Cg-vZI" id="bwK-Ve-Bp9"/>
