UPDATE: DetailView buy pizza logic, MainView buy pizza logic, pizza cell add buy button

--- a/PizzaApp/PizzaApp/Base.lproj/Main.storyboard
+++ b/PizzaApp/PizzaApp/Base.lproj/Main.storyboard
@@ -26,6 +26,20 @@
                                 <rect key="frame" x="15" y="110" width="363" height="693"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jWe-Y5-Brw">
+                                <rect key="frame" x="326.33333333333331" y="67" width="56.666666666666686" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Cart"/>
+                                <connections>
+                                    <action selector="cartButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LfV-8V-ioe"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="js0-nU-zaw">
+                                <rect key="frame" x="284.33333333333331" y="74" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -33,13 +47,18 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VOD-N5-MhI" secondAttribute="trailing" constant="15" id="23F-qV-Roy"/>
                             <constraint firstItem="VOD-N5-MhI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="ELQ-XP-o08"/>
                             <constraint firstItem="i7J-bw-n6T" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="Fia-IX-Zev"/>
+                            <constraint firstItem="jWe-Y5-Brw" firstAttribute="leading" secondItem="js0-nU-zaw" secondAttribute="trailing" id="Phl-kA-2nd"/>
+                            <constraint firstItem="jWe-Y5-Brw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="Rpd-fV-dC2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="i7J-bw-n6T" secondAttribute="trailing" constant="15" id="TOq-Ld-S2M"/>
                             <constraint firstItem="i7J-bw-n6T" firstAttribute="top" secondItem="VOD-N5-MhI" secondAttribute="bottom" constant="15" id="TOw-eW-QcB"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="i7J-bw-n6T" secondAttribute="bottom" constant="15" id="ZVQ-ze-W7n"/>
+                            <constraint firstItem="js0-nU-zaw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="15" id="hxR-bV-rmk"/>
                             <constraint firstItem="VOD-N5-MhI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="15" id="sxm-37-bkL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jWe-Y5-Brw" secondAttribute="trailing" constant="10" id="w1n-SQ-b9B"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="cartCounterLabel" destination="js0-nU-zaw" id="Wxx-YX-n08"/>
                         <outlet property="tableview" destination="i7J-bw-n6T" id="cwP-aK-lty"/>
                         <outlet property="titleLabel" destination="VOD-N5-MhI" id="cYl-cC-3ny"/>
                     </connections>
